@@ -3,8 +3,8 @@ package org.deltava.beans.academy;
 
 import java.util.*;
 
-import org.deltava.beans.DatabaseBean;
-import org.deltava.beans.ViewEntry;
+import org.deltava.beans.*;
+import org.deltava.beans.testing.CheckRide;
 
 /**
  * A bean to store Flight Academy Course information.
@@ -32,6 +32,9 @@ public class Course extends DatabaseBean implements ViewEntry {
 	private Date _startDate;
 	private Date _endDate;
 	private Date _lastComment;
+	
+	private boolean _hasCR;
+	private CheckRide _cr;
 	
 	private final Map<Integer, CourseProgress> _progress = new TreeMap<Integer, CourseProgress>();
 	private final SortedSet<CourseComment> _comments = new TreeSet<CourseComment>();
@@ -158,7 +161,7 @@ public class Course extends DatabaseBean implements ViewEntry {
 	 * @return a CourgeProgress bean, or null if not found
 	 */
 	public CourseProgress getProgressEntry(int seq) {
-		return _progress.get(new Integer(seq));
+		return _progress.get(Integer.valueOf(seq));
 	}
 	
 	/**
@@ -171,12 +174,30 @@ public class Course extends DatabaseBean implements ViewEntry {
 	}
 	
 	/**
+	 * Returns whether this Course has a Check Ride associated with it.
+	 * @return TRUE if a Check Ride is required for completion, otherwise FALSE
+	 * @see Course#setHasCheckRide(boolean)
+	 */
+	public boolean getHasCheckRide() {
+		return _hasCR;
+	}
+	
+	/**
+	 * Returns the most recent check ride for this Course.
+	 * @return a CheckRide object, or null if none
+	 * @see Course#setCheckRide(CheckRide)
+	 */
+	public CheckRide getCheckRide() {
+		return _cr;
+	}
+	
+	/**
 	 * Adds a new Progress entry. If an existing entry is found, it is overwritten.
 	 * @param cp the Progress bean
 	 * @see Course#getProgress()
 	 */
 	public void addProgress(CourseProgress cp) {
-		_progress.put(new Integer(cp.getID()), cp);
+		_progress.put(Integer.valueOf(cp.getID()), cp);
 	}
 	
 	/**
@@ -213,15 +234,11 @@ public class Course extends DatabaseBean implements ViewEntry {
 	/**
 	 * Updates the database ID of the assigned Instructor.
 	 * @param id the database ID
-	 * @throws IllegalArgumentException if id is negative
 	 * @see Course#getInstructorID()
 	 * @see Course#setPilotID(int)
 	 */
 	public void setInstructorID(int id) {
-		if (id < 0)
-			throw new IllegalArgumentException("Invalid Database ID - " + id);
-		
-		_instructorID = id;
+		_instructorID = Math.max(0, id);
 	}
 	
 	/**
@@ -232,6 +249,15 @@ public class Course extends DatabaseBean implements ViewEntry {
 	 */
 	public void setName(String name) {
 		_certName = name.trim();
+	}
+	
+	/**
+	 * Updates whether this Course requires a Check Ride.
+	 * @param hasCR TRUE if a Check Ride is required, otherwise FALSE
+	 * @see Course#getHasCheckRide()
+	 */
+	public void setHasCheckRide(boolean hasCR) {
+		_hasCR = hasCR;
 	}
 	
 	/**
@@ -286,6 +312,15 @@ public class Course extends DatabaseBean implements ViewEntry {
 	 */
 	public void setLastComment(Date dt) {
 		_lastComment = dt;
+	}
+	
+	/**
+	 * Sets the most recent Check Ride for this Course.
+	 * @param cr the CheckRide object, or null
+	 * @see Course#getCheckRide()
+	 */
+	public void setCheckRide(CheckRide cr) {
+		_cr = cr;
 	}
 
 	/**
